ENH: AtlasCreator: Use Double as re-cast type instead of Float. Remove all used temporary files during cleanup stage. Fixed overflow problem in connection with dynamic registration.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16086 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/AtlasCreator/CMakeLists.txt
+++ b/Modules/AtlasCreator/CMakeLists.txt
@@ -15,6 +15,12 @@ if(NOT Slicer3_SOURCE_DIR)
 endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
+# Include the Cxx/ directory
+subDirs(
+  Cxx
+)
+
+# --------------------------------------------------------------------------
 # Copy over the Python files
 
 if(Slicer3_USE_PYTHON)
@@ -34,3 +40,4 @@ if(Slicer3_USE_PYTHON)
     )
 
 endif(Slicer3_USE_PYTHON)
+
