ENH: EMSegment: Enable the AtlasCreatorCxxModule in the EMSegmentTclInterpreter.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16100 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
+++ b/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
@@ -66,6 +66,7 @@ target_link_libraries(
   ${CLP_MODULE}
   EMSegment
   vtkCommon
+  AtlasCreatorCxxModule
   )
 
 set(CLP_MODULE EMSegmentTransformToNewFormat)
