BUG: These did not work and were not used by the module - a working version of the filter is now in the AtlasCreator
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16105 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/CMakeLists.txt
+++ b/Modules/ChangeTracker/CMakeLists.txt
@@ -61,7 +61,7 @@ set(ChangeTracker_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageIslandFilter.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageHistogramNormalization.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageGCR.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageKilianDistanceTransform.cxx
+  # ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageKilianDistanceTransform.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Filters/vtkImageSumOverVoxels.cxx 
   # wizard
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkChangeTrackerStep.cxx
