ENH: AtlasCreator: Added vtkMRMLAtlasCreatorNode. This can be used to configure AtlasCreator parameters and invoke node.Launch() to start the computation from external modules. Background: The AtlasCreator Scripted Module listens to AddNodeEvents for vtkMRMLAtlasCreatorNodes and then observes these nodes for LaunchEvents to run the logic. Additionally, the CMTK extension (if installed) is now supported as an alternative to BRAINSFit for registration and resampling. Several other fixes.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16113 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/AtlasCreator/Cxx/CMakeLists.txt
+++ b/Modules/AtlasCreator/Cxx/CMakeLists.txt
@@ -53,6 +53,7 @@ install(FILES
 
 set(AtlasCreatorCxxModule_SRCS
   vtkAtlasCreatorCxxModuleLogic.cxx
+  vtkMRMLAtlasCreatorNode.cxx
   vtkImageKilianDistanceTransform.cxx
   vtkImagePCAFilter.cxx
   )
