--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -854,6 +854,7 @@ if (Slicer3_SOURCE_DIR)
     #ZeroCrossingBasedEdgeDetectionImageFilterLib
     DiffusionTensorMathematics
     DiffusionTensorEstimation
+    BSplineToDeformationField
     )
 
   slicer3_install_plugins(${TARGETS})
