COMP: apply fix suggested by Mark Scully for cpack error
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16146 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSCommonLib/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSCommonLib/CMakeLists.txt
@@ -92,7 +92,7 @@ else (Slicer_SOURCE_DIR)
                  @ONLY)
 
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/BRAINSCommonLibInstallConfig.cmake
-          DESTINATION lib/BRAINSCommonLib
+          DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/BRAINSCommonLib
           COMPONENT Development
           RENAME BRAINSCommonLibConfig.cmake)
 
