BUG: Install BSplineToDeformationField as a Plugin
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16150 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -855,6 +855,7 @@ if (Slicer3_SOURCE_DIR)
     DiffusionTensorMathematics
     DiffusionTensorEstimation
     BSplineToDeformationField
+    BSplineToDeformationFieldLib
     )
 
   slicer3_install_plugins(${TARGETS})
