ENH: Cleaned up target libraries
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16188 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
@@ -49,7 +49,7 @@ else (Slicer3_SOURCE_DIR)
   generateclp(${CLP}_SOURCE ${CLP}.xml)
 endif (Slicer3_SOURCE_DIR)
 add_executable(${CLP} ${${CLP}_SOURCE})
-target_link_libraries (${CLP} ITKIO ITKBasicFilters)
+target_link_libraries (${CLP} ${ITK_LIBRARIES})
 
 if (Slicer3_SOURCE_DIR)
   slicer3_set_plugins_output_path(${CLP})
@@ -57,7 +57,7 @@ if (Slicer3_SOURCE_DIR)
   add_library(${CLP}Lib SHARED ${${CLP}_SOURCE})
   slicer3_set_plugins_output_path(${CLP}Lib)
   set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
-  target_link_libraries (${CLP}Lib ITKIO ITKBasicFilters)
+  target_link_libraries (${CLP}Lib ${ITK_LIBRARIES})
 
   set(TARGETS ${CLP}Lib ${CLP})
   slicer3_install_plugins(${TARGETS})
