--- a/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
@@ -44,8 +44,11 @@ configure_file(
 
 
 set(CLP BRAINSROIAuto)
+#set(${CLP}_SOURCE BRAINSROIAuto.cxx )
+#CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSROIAuto.xml "${${CLP}_SOURCE}" "")
 set(${CLP}_SOURCE BRAINSROIAuto.cxx )
-CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSROIAuto.xml "${${CLP}_SOURCE}" "")
+set(${CLP}_PRIMARY_SOURCE BRAINSROIAuto.cxx)
+CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSROIAuto.xml "${${CLP}_SOURCE}" "${${CLP}_PRIMARY_SOURCE}" "main" "")
 target_link_libraries( ${CLP} BRAINSCommonLib ITKIO ITKAlgorithms ${OPTIONAL_DEBUG_LINK_LIBRARIES})
 
 if(BUILD_TESTING)
