--- a/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
@@ -49,8 +49,9 @@ endif(ITK_VERSION_MAJOR EQUAL 4 )
 
 ###
 set(CLP BRAINSFit)
-set(${CLP}_SOURCE BRAINSFit.cxx  ${BRAINSFit_SOURCE_DIR}/BRAINSFitPrimary.cxx)
-CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSFitPrimary.xml "${${CLP}_SOURCE}" "")
+set(${CLP}_SOURCE BRAINSFit.cxx )
+set(${CLP}_PRIMARY_SOURCE ${BRAINSFit_SOURCE_DIR}/BRAINSFitPrimary.cxx)
+CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSFitPrimary.xml "${${CLP}_SOURCE}" "${${CLP}_PRIMARY_SOURCE}" "BRAINSFitPrimary" "")
 target_link_libraries( ${CLP} BRAINSCommonLib ${ITKREVIEWLIB} ITKIO ITKAlgorithms ${OPTIONAL_DEBUG_LINK_LIBRARIES})
 
 INSTALL(TARGETS BRAINSFit DESTINATION bin)
