ENH:  More brains3 merging to consolodate build processes for Slicer3 and BRAINS3.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16224 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSDemonWarp/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSDemonWarp/CMakeLists.txt
@@ -16,6 +16,8 @@ SETIFEMPTY(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 SETIFEMPTY(CMAKE_BUNDLE_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/bin)
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
 
+SETIFEMPTY(MIDAS_REST_URL "http://midas.kitware.com/api/rest" CACHE STRING "The MIDAS server where testing data resides")
+
 ###
 CHECKIFSLICER3BUILD()  ## Call the convenience macro
 
