--- a/Applications/CLI/BRAINSTools/BRAINSDemonWarp/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSDemonWarp/TestSuite/CMakeLists.txt
@@ -10,7 +10,7 @@ if(WIN32)
   set(BRAINSWARP_ITK_LIBS "")
   set(BUILD_SUBDIR ${CMAKE_BUILD_TYPE}/)
 else(WIN32)
-  set(BRAINSWARP_ITK_LIBS ITKAlgorithms ITKIO)
+  set(BRAINSWARP_ITK_LIBS ${ITK_LIBRARIES})
 endif(WIN32)
 
 add_executable( BRAINSDemonWarpCLPTests BRAINSDemonWarpCLPTests.cxx ${BRAINSDemonWarp_SOURCE_DIR}/BRAINSDemonWarpPrimary.cxx)
