--- a/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
@@ -16,6 +16,8 @@ SETIFEMPTY(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 SETIFEMPTY(CMAKE_BUNDLE_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/bin)
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
 
+SETIFEMPTY(MIDAS_REST_URL "http://midas.kitware.com/api/rest" CACHE STRING "The MIDAS server where testing data resides")
+
 ###
 CHECKIFSLICER3BUILD()  ## Call the convenience macro
 
@@ -44,12 +46,10 @@ configure_file(
 
 
 set(CLP BRAINSROIAuto)
-#set(${CLP}_SOURCE BRAINSROIAuto.cxx )
-#CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSROIAuto.xml "${${CLP}_SOURCE}" "")
 set(${CLP}_SOURCE BRAINSROIAuto.cxx )
 set(${CLP}_PRIMARY_SOURCE BRAINSROIAuto.cxx)
 CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSROIAuto.xml "${${CLP}_SOURCE}" "${${CLP}_PRIMARY_SOURCE}" "main" "")
-target_link_libraries( ${CLP} BRAINSCommonLib ITKIO ITKAlgorithms ${OPTIONAL_DEBUG_LINK_LIBRARIES})
+target_link_libraries( ${CLP} BRAINSCommonLib ${ITK_LIBRARIES} ${OPTIONAL_DEBUG_LINK_LIBRARIES})
 
 if(BUILD_TESTING)
     add_subdirectory(TestSuite)
