--- a/Modules/AtlasCreator/CMakeLists.txt
+++ b/Modules/AtlasCreator/CMakeLists.txt
@@ -23,7 +23,7 @@ subDirs(
 # --------------------------------------------------------------------------
 # Include the Combiner/ directory
 subDirs(
-  ACCombiner
+  ACITKTools
 )
 
 # --------------------------------------------------------------------------
