--- a/Modules/AtlasCreator/ACITKTools/CMakeLists.txt
+++ b/Modules/AtlasCreator/ACITKTools/CMakeLists.txt
@@ -1,5 +1,5 @@
-project(ACCombiner)
-set(LOCAL_PROJECT_NAME ACCombiner)
+project(ACITKTools)
+set(LOCAL_PROJECT_NAME ACITKTools)
 cmake_minimum_required(VERSION 2.8)
 cmake_policy(VERSION 2.8)
 
@@ -9,4 +9,6 @@ if(NOT ITK_FOUND)
 endif(NOT ITK_FOUND)
 
 ADD_EXECUTABLE(ACCombiner Combiner.cxx )
+ADD_EXECUTABLE(ACMeanImage MeanImage.cxx )
 TARGET_LINK_LIBRARIES(ACCombiner ITKIO)
+TARGET_LINK_LIBRARIES(ACMeanImage ITKIO)
