ENH: I cleaned up code to ease transition to Slicer4
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16296 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -167,6 +167,7 @@ set(EMSegment_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentRunSegmentationStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentInputChannelsStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentPreProcessingStep.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentDynamicFrame.cxx
   )
 
  set(EMSegment_SRCS ${EMSegment_SRCS}
