BUG: Don't run local tests per default
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16301 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -34,7 +34,7 @@ set(EMSEG_RUN_COMPARE_TESTS   OFF
   )
 mark_as_advanced(EMSEG_RUN_COMPARE_TESTS)
 
-set(EMSEG_RUN_LOCAL_TESTS   ON
+set(EMSEG_RUN_LOCAL_TESTS   OFF
   CACHE BOOL "Enable local EMSegment tests." FORCE
   )
 mark_as_advanced(EMSEG_RUN_LOCAL_TESTS)
