--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -48,9 +48,9 @@ message("######### CMAKE_CURRENT_SOURCE_DIR:        ${CMAKE_CURRENT_SOURCE_DIR}"
 
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
 if ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
-  set (LOCAL_CMAKE_BUILD_OPTIONS "-C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-x86_64-sse.cmake")
+  set (LOCAL_CMAKE_BUILD_OPTIONS -C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-x86_64-sse.cmake)
 else ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
-  set (LOCAL_CMAKE_BUILD_OPTIONS "-C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-p4-sse.cmake")
+  set (LOCAL_CMAKE_BUILD_OPTIONS -C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-p4-sse.cmake)
 endif ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
 
