--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -52,6 +52,10 @@ if ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
 else ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
   set (LOCAL_CMAKE_BUILD_OPTIONS -C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-p4-sse.cmake)
 endif ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
+
+if (${APPLE})
+  SET((LOCAL_CMAKE_BUILD_OPTIONS ${(LOCAL_CMAKE_BUILD_OPTIONS} -DCMTK_USE_OPENMP:BOOL=OFF)
+endif (${APPLE})
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
 
 
