BUG: disable CMTK_USE_OPENMP on mac
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16308 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -54,7 +54,7 @@ else ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
 endif ( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64 )
 
 if (${APPLE})
-  SET((LOCAL_CMAKE_BUILD_OPTIONS ${(LOCAL_CMAKE_BUILD_OPTIONS} -DCMTK_USE_OPENMP:BOOL=OFF)
+  SET(LOCAL_CMAKE_BUILD_OPTIONS ${LOCAL_CMAKE_BUILD_OPTIONS} -DCMTK_USE_OPENMP:BOOL=OFF)
 endif (${APPLE})
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
 
