ENH: Seperated KW from rest to simplify transition to Slicer4
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16309 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -153,8 +153,9 @@ set(EMSegment_SRCS
 
   # module
   vtkEMSegmentMRMLManager.cxx 
-  vtkEMSegmentGUI.cxx
   vtkEMSegmentLogic.cxx 
+  vtkEMSegmentKWLogic.cxx
+  vtkEMSegmentGUI.cxx 
   # wizard
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentParametersSetStep.cxx
@@ -167,7 +168,7 @@ set(EMSegment_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentRunSegmentationStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentInputChannelsStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentPreProcessingStep.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentDynamicFrame.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentKWDynamicFrame.cxx
   )
 
  set(EMSegment_SRCS ${EMSegment_SRCS}
@@ -238,7 +239,7 @@ slicer3_install_modules(${lib_name})
 # Testing
 
 if(BUILD_TESTING)
-  ADD_SUBDIRECTORY(Testing)
+ ADD_SUBDIRECTORY(Testing)
 endif(BUILD_TESTING)
 
 # --------------------------------------------------------------------------
