--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -47,6 +47,7 @@ message("######### CMAKE_CURRENT_BINARY_DIR:        ${CMAKE_CURRENT_BINARY_DIR}"
 message("######### CMAKE_CURRENT_SOURCE_DIR:        ${CMAKE_CURRENT_SOURCE_DIR}")
 
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
+
 if ( "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL x86_64 )
   set (LOCAL_CMAKE_BUILD_OPTIONS -C ${CMAKE_CURRENT_BINARY_DIR}/CMTK-prefix/src/CMTK/config/gcc-x86_64-sse.cmake)
 else ( "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL x86_64 )
@@ -56,6 +57,12 @@ endif ( "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL x86_64 )
 if (${APPLE})
   SET(LOCAL_CMAKE_BUILD_OPTIONS ${LOCAL_CMAKE_BUILD_OPTIONS} -DCMTK_USE_OPENMP:BOOL=OFF)
 endif (${APPLE})
+
+# this is not optimal but should work for now
+if (${MSVC})
+   set(LOCAL_CMAKE_BUILD_OPTIONS "-DCMAKE_CXX_FLAGS:STRING=/arch:SSE2")
+endif (${MSVC})
+
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
 
 
