BUG: Disable OpenMP on Windows because of a VS2008 issue
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16316 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -62,7 +62,8 @@ endif (${APPLE})
 
 # this is not optimal but should work for now
 if (${MSVC})
-   set(LOCAL_CMAKE_BUILD_OPTIONS "-DCMAKE_CXX_FLAGS:STRING=/arch:SSE2 -DCMTK_USE_OPENMP:BOOL=OFF")
+   set(LOCAL_CMAKE_BUILD_OPTIONS ${LOCAL_CMAKE_BUILD_OPTIONS} -DCMAKE_CXX_FLAGS:STRING=/arch:SSE2)
+   set(LOCAL_CMAKE_BUILD_OPTIONS ${LOCAL_CMAKE_BUILD_OPTIONS} -DCMTK_USE_OPENMP:BOOL=OFF)
 endif (${MSVC})
 
 message("######### LOCAL_CMAKE_BUILD_OPTIONS:       ${LOCAL_CMAKE_BUILD_OPTIONS}")
