BUG: Update CT-Hand-Bone task because of API change in EMSegment MRML manager
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16320 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -816,7 +816,7 @@ if( EMSEG_RUN_LOCAL_TESTS )
     COMMAND ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
     --no-error-popup
     --verbose --mrmlSceneFileName
-    ${EMSegment_TESTDATA_DIR}/CT-Hand-Bone.mrml
+    ${EMSegment_SOURCE_DIR}/Tasks/CT-Hand-Bone.mrml
     --targetVolumeFileNames
     MIDAS{CT_Hand_Bone_Subject_1.nrrd.md5}
     --resultVolumeFileName
